GC Dental/src/objects/Sales_Order_Line_Items__c.object
<CustomObject>
    <fields>
        <fullName>Name_of_the_Product__c</fullName>
        <label>Name of the Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Quantity__c</fullName>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerID__c</fullName>
        <formula>SalesOrder__r.Customer__r.Owner.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(Product__r.Product_Family__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_From__c</fullName>
        <label>Product From</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo Products</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Free</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Sales Order Line Items</relationshipLabel>
        <relationshipName>Sales_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_in__c</fullName>
        <label>Quantity in</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesOrder__c</fullName>
        <label>SalesOrder</label>
        <referenceTo>SalesOrder__c</referenceTo>
        <relationshipLabel>Sales Order Line Items</relationshipLabel>
        <relationshipName>Sales_Order_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Product_Amount__c</fullName>
        <formula>Price__c * Order_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Product Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UniqueNumber__c</fullName>
        <label>UniqueNumber</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>customer_Product__c</fullName>
        <label>Customer Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Sales Order Line Item</label>
    <nameField>
        <label>Sales Order Line Item name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>